--- a/ejercicios/desafio_1/index.html
+++ b/ejercicios/desafio_1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuento de la buena Pipa | Desafio numero 1</title>
+    <title>Cuento de la buena Pipa | Desafio 1</title>
     <script src="js/script.js"></script>
 </head>
 
