--- a/proyecto-final/index.html
+++ b/proyecto-final/index.html
@@ -20,9 +20,20 @@
       <link href="css/style.css" rel="stylesheet" />
       <!-- responsive style -->
       <link href="css/responsive.css" rel="stylesheet" />
+      <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+      <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
       <script type="module" src="js/script.js"></script>
    </head>
    <style>
+
+      .claseBotonAgregar i{
+         color: white
+
+      }
+      .claseBotonQuitar i{
+         color: red
+
+      }
       #resultadoBuscador{
       width: 400px; 
       height:400px; 
