--- a/proyecto-final/index.html
+++ b/proyecto-final/index.html
@@ -285,6 +285,31 @@
       </div>
    </section>
    <!-- end client section -->
+<!-- seccion lacoste-->
+   <section class="product_section layout_padding" id="product_section">
+      <div class="container">
+         <div class="heading_container heading_center">
+            <h2>
+               #LACOSTE
+            </h2>
+         </div>
+         <div class="row" id="seccion_lacoste">
+         </div>
+      </div>
+   </section>
+
+<!-- seccion polo-->
+   <section class="product_section layout_padding" id="product_section">
+      <div class="container">
+         <div class="heading_container heading_center">
+            <h2>
+               #VESTIDOS
+            </h2>
+         </div>
+         <div class="row" id="seccion_vestidos">
+         </div>
+      </div>
+   </section>
 
 
    <section class="why_section layout_padding">
@@ -379,7 +404,7 @@
 
 
    <div class="modal" id="modalCarrito" tabindex="-1" role="dialog">
-      <div class="modal-dialog" role="document" style="max-width:760px!important">
+      <div class="modal-dialog" role="document" style="max-width:800px!important">
          <div class="modal-content">
             <div class="modal-header">
                <h5 class="modal-title">Resúmen de compra</h5>
@@ -395,9 +420,7 @@
          </div>
             <div class="modal-footer">
 
-               <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-               <button type="button" class="btn btn-primary">Finalizar compra</button>
-            </div>
+                           </div>
          </div>
       </div>
    </div>
@@ -430,6 +453,9 @@
    <div class="cpy_">
       <p>© 2021 All Rights Reserved By <a href="https://html.design/">Free Html Templates</a></p>
    </div>
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.17/dist/sweetalert2.all.min.js"></script>
    <script type="module" src="js/script.js"></script>
    <!-- jQery -->
    <script src="js/jquery-3.4.1.min.js"></script>
